<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Material3.BottomSheet"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_gravity="top|center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp">

            <TextView
                android:layout_margin="4dp"
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                style="@style/TextAppearance.Material3.TitleLarge"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="New Request"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/TextAppearance.Material3.BodySmall"
                android:text="Within minutes ⚡"/>

<!-- Normal vs Emergency request toggle -->
            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:selectionRequired="true"
                app:singleSelection="true"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center_horizontal">
                <Button
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/normal"
                    android:enabled="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Normal"
                    />
                <Button
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/emergency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Emergency"
                    />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <!-- SUBJECT -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/subject"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_subject"
                app:layout_constraintTop_toBottomOf="@id/toggle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginVertical="8dp"

                app:startIconDrawable="@drawable/convo">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusedByDefault="true"
                    android:imeOptions="actionNext"

                    android:inputType="text"
                    tools:text="Visit home for festival" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- REASON -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reason"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/subject"
                app:layout_constraintEnd_toStartOf="parent"
                android:layout_marginVertical="8dp"

                android:hint="@string/hint_reason"
                app:startIconDrawable="@drawable/chat">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"

                    android:inputType="text"
                    tools:text="Once in a while, like a human, I need to get out of my home" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Date -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/duration"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/reason"
                app:layout_constraintEnd_toStartOf="parent"
                android:layout_marginVertical="8dp"

                android:hint="@string/hint_duration"
                app:startIconDrawable="@drawable/date_range">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/duration_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Send Button -->
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:text="Send"
                app:icon="@drawable/send"
                app:layout_constraintEnd_toEndOf="@+id/subject"
                app:layout_constraintTop_toBottomOf="@id/duration" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>